--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "bcryptjs": "^2.4.3",
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
+    "express-async-handler": "^1.2.0",
     "json-server": "^0.17.0",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.2.5",
     "react": "^17.0.2",
     "react-dark-mode-toggle": "^0.2.0",
