--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-
-DB_CONNECTION = mongodb+srv://reactuser:user123@cluster-react-app.mvywr.mongodb.net/mernapp?retryWrites=true&w=majority
+port = 3001
+MONGO_URL = mongodb+srv://reactuser:user123@cluster-react-app.mvywr.mongodb.net/mernapp?retryWrites=true&w=majority
